--- a/xs.css
+++ b/xs.css
@@ -12,6 +12,10 @@
   src: url(font/MinionProOTF/MinionPro-Regular.otf);
 }
 @font-face {
+  font-family: minionproMed;
+  src: url(font/MinionProOTF/MinionPro-Medium.otf);
+}
+@font-face {
   font-family: timegates;
   src: url(font/TimegatesOTF/Timegates-Regular.otf);
 }
@@ -19,7 +23,10 @@
   font-family: primus;
   src: url(font/PrimusTTF/PR-Columban-Primus.ttf);
 }
-
+@font-face {
+  font-family: bible;
+  src: url(font/JMHHolyBible.ttf);
+}
 
 
 .card {
@@ -52,13 +59,14 @@
     #metal{height: 400px; width:100%;}
     
 .card span{
-    font-family:timegates,serif;
+    font-family:minionpro,serif;
     letter-spacing: 0.2rem;
     display:block;
    font-weight: normal;
+    font-variant: small-caps;
     font-size: 2em;
     text-align:center;
-    color:#b88c5b;
+    color:#fef8e5;
 }
 .card p{
     font-size: 1.5em;
@@ -125,7 +133,7 @@
 }
     .card hr {
     position:relative;
-    top:4px;
+    top:9px;
     background:url(img/hr.png);
     height: 3px;
     border:none;
@@ -481,6 +489,15 @@ background-repeat: no-repeat; background-size: cover;
     margin: auto;
     
 }
+       #hla{
+        
+        height: 25px;
+    width: 100%;
+    margin: auto;
+        object-fit: contain;
+        
+        
+    }
    
     #menubar{
     position:relative;
@@ -522,13 +539,16 @@ background-repeat: no-repeat; background-size: cover;
     
 }
 .card span{
-    font-family:timegates,serif;
+    font-family:minionproMed,serif;
     letter-spacing: 0.2rem;
     display:block;
    font-weight: normal;
-    font-size: 3em;
+    font-variant:small-caps;
+    font-size: 2em;
+    position: relative;
+    bottom:0.25em;
     text-align:center;
-    color:#b88c5b;
+    color:#fef8e5;
 }
 .card p{
     font-family:minionpro,sans-serif;
@@ -574,6 +594,7 @@ background-repeat: no-repeat; background-size: cover;
 }
 
 .fcard a {
+    text-align:left;
     display: block;
     color: white;
     text-decoration: none;
@@ -581,6 +602,11 @@ background-repeat: no-repeat; background-size: cover;
     font-family: minionpro,Verdana, Arial, Helvetica, sans-serif;
     font-size:1em;
     margin-top:2%;
+    width:75%;
+    margin-left:auto;
+}
+.fcard a img{
+    height:1.5em; width:1.5em; top:0.5em;
 }
 
 .fcard h1 {
@@ -623,7 +649,7 @@ background-repeat: no-repeat; background-size: cover;
 }
 .fl li {
     text-decoration: none;
-    width:25%;
+    width:20%;
     height:75%;
     margin:0% 0%;
     padding:0%;
@@ -947,12 +973,16 @@ background-repeat: no-repeat; background-size: cover;
         height:375px;
         width:14%;
     }
-    #ceevee{ width:40%; position:relative; color:white; font-family: minionpro;}
-#ceevee p {font-size: 1em; margin:0; padding:0;}
-#ceevee h1{margin:0.15em 0; font-weight:normal; font-variant:small-caps;}
-#ceevee h2{font-size:1em; color:#b0b5b8;}
+#ceevee{ width:40%; position:relative; color:white; font-family: minionproMed;}
+    
+#ceevee p {font-size: 1em; margin:0; padding:0; color:#fef8e5; font-family: minionpro;}
+#ceevee h1{margin:0.15em 0; font-size: 1.5em; font-weight:normal; font-variant:small-caps;}
+#ceevee h1 img{height:1em; width:1em;} 
+#ceevee h2{font-size:1em; color:#fef8e5; font-family: minionpro;  font-weight:normal;}
+#ceevee h2 img{height:1em; width:1em;}    
 #ceevee span{}
-#ceevee ul li{color:#b0b5b8;}
+#ceevee ul {margin-left:1em;}
+#ceevee ul li{color:#fef8e5;}
 #avatar{top:-16em; position:relative; width:60%;}
 #siga{top:-4em;}
  
@@ -1421,6 +1451,8 @@ button{
     z-index:2;
 }
 #copy{
+    font-family: bible;
+    font-variant: small-caps;
     height:auto;
     bottom:0px;
     position:relative;
@@ -1433,7 +1465,14 @@ button{
     bottom:-10px;
 }
 
-
+#title img{
+    position:relative;
+    width:5%;
+    object-fit: contain;
+}
+#title span{
+    display:inline;
+}
 /*filter: drop-shadow(0px 0px 10px #000);*/
 /* Hide scrollbar for Chrome, Safari and Opera */
 /*
