--- a/xs.css
+++ b/xs.css
@@ -858,6 +858,12 @@ background-repeat: no-repeat; background-size: cover;
     opacity:0;
     
 }    
+    .slide video{
+        position: relative;
+height: 100%;
+width: 100%;
+object-fit: contain;
+    }
 .activeSlide {
     height:100%;
     width:50%;
